--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: var(--body-font);
   background-color: var(--bg-color);
