--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@
   --body-color: hsl(var(--second-hue), 0%, 12%);
   --container-color: hsl(var(--second-hue), 30%, 20%); */
 
+  --main-color: #537895;
+  --main-color-dark: #09203f;
   --red-color: #e54b4b;
   --white-color: #fff;
   --bg-color: #eff0f5;
@@ -56,6 +58,23 @@ html {
 body {
   font-family: var(--body-font);
   background-color: var(--bg-color);
+  background: linear-gradient(
+    to top,
+    var(--main-color-dark) 0%,
+    var(--main-color) 100%
+  );
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 500;
+  line-height: 1.2;
+  font-family: var(--header-font);
+  color: var(--black-color);
 }
 
 .container {
@@ -67,6 +86,46 @@ body {
   padding: 0 40px;
   /* position: relative; */
   clear: both;
+}
+
+.action_outline_btn {
+  color: var(--main-color-dark);
+  border: 2px solid var(--main-color-dark);
+  padding: 10px 40px;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  border-radius: 5rem;
+  font-size: 16px;
+}
+
+.action_outline_btn:hover {
+  background-color: var(--main-color-dark);
+  color: var(--white-color);
+  border-radius: 5rem;
+}
+
+.action_btn {
+  color: var(--white-color);
+  background-color: var(--main-color-dark);
+  /* border: 1px solid var(--main-color-dark); */
+  padding: 10px 40px;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  border-radius: 5rem;
+  font-size: 16px;
+}
+
+.action_btn:hover {
+  background-color: transparent;
+  color: var(--white-color);
+  border: 2px solid var(--white-color);
+  border-radius: 5rem;
 }
 
 /* ? ------------------ ? */
@@ -84,7 +143,7 @@ body {
 .nav_menu {
   position: fixed;
   bottom: 1rem;
-  background-color: hsla(218, 32%, 16%, 0.8);
+  background-color: hsla(218, 75%, 13%, 0.8);
   width: 378px;
   border-radius: 4rem;
   padding: 1rem 2.25rem;
@@ -119,6 +178,10 @@ body {
   transition: all 0.4s ease;
 }
 
+.icon_img {
+  width: 25px;
+}
+
 /* ! ------------------ ! */
 /* *       NAVBAR       * */
 /* ? ------------------ ? */
@@ -130,19 +193,19 @@ body {
 .home {
   width: 100%;
   height: 100vh;
-  clear: both;
-  float: left;
-  position: relative;
+  display: flex;
+  align-items: center;
+  /* position: relative;
   clip-path: polygon(0 0, 100% 0, 100% 100%, 25% 100%, 0 100%);
   overflow: hidden;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
   -ms-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
+  transition: all 0.3s ease; */
 }
 
-.home .ripple {
+/* .home .ripple {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -161,21 +224,21 @@ body {
   right: 0;
   background-color: rgba(0, 0, 0, 0.3);
   z-index: 1;
-}
-
-.home .container {
-  height: 100%;
-}
+} */
 
 .home .details {
+  text-align: center;
+  /* width: 100%;
+  text-align: center;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  z-index: 5;
+  z-index: 5; */
 }
 
 .home .name {
-  font-size: 52px;
+  /* font-size: 52px; */
+  font-size: 3.5rem;
   font-weight: 700;
   color: var(--white-color);
   /* margin-bottom: 11px; */
@@ -183,16 +246,18 @@ body {
 }
 
 .home .job {
-  color: var(--red-color);
+  color: var(--main-color-dark);
   font-family: var(--header-font);
-  font-size: 17px;
+  /* font-size: 17px; */
+  font-size: 1.5rem;
   font-weight: 500;
   margin-bottom: 40px;
   max-width: 400px;
   font-style: italic;
+  font-weight: 700;
 }
 
-.name-section {
+.name_section {
   margin-bottom: 20px;
 }
 
@@ -200,30 +265,112 @@ body {
   opacity: 1;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 500;
-  line-height: 1.2;
-  font-family: var(--header-font);
-  color: var(--black-color);
+.action_section {
+  margin-top: 30px;
+  gap: 20px;
 }
 
-/* .section {
-  width: 100%;
-  height: auto;
-  clear: both;
-  float: left;
-} */
+.symfony_icon {
+  width: 30px;
+  height: 30px;
+  fill: var(--main-color-dark);
+}
+
+.flutter_icon {
+  width: 30px;
+  height: 30px;
+  fill: var(--main-color-dark);
+}
+
+.scroll_down {
+  position: absolute;
+  bottom: 50px;
+  right: 30px;
+  cursor: pointer;
+  writing-mode: vertical-rl;
+}
+
+.scroll_link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  text-decoration: none;
+  color: var(--white-color);
+}
+
+.scroll_link i {
+  font-size: 24px;
+  animation: bounce 2s infinite;
+}
+
+.scroll_link span {
+  transform: scale(-1);
+}
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-15px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
+.social_network {
+  position: absolute;
+  bottom: 50px;
+  left: 30px;
+  cursor: pointer;
+}
+
+.social_network_item {
+  /* flex-direction: column; */
+  /* background-color: hsla(218, 75%, 13%, 0.8); */
+  background-color: var(--white-color);
+  padding: 10px;
+  gap: 15px;
+  margin-bottom: 5px;
+  border-radius: 10%;
+}
+
+.social_network_link {
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  text-decoration: none;
+  color: var(--main-color-dark);
+  /* color: var(--white-color); */
+}
+
+.social_network::after {
+  content: "";
+  display: block;
+  transform: rotate(90deg);
+  width: 32px;
+  height: 2px;
+  background-color: var(--white-color);
+  margin-top: 23px;
+}
+
+/* ! ------------------ ! */
+/* *        HOME        * */
+/* ? ------------------ ? */
+
+/* ? ------------------ ? */
+/* *       ABOUT        * */
+/* ! ------------------ ! */
 
 .about {
   width: 100%;
   height: auto;
-  clear: both;
-  float: left;
   margin-bottom: 100px;
   padding-top: 100px;
 }
@@ -261,8 +408,6 @@ h6 {
 .abe_title {
   width: 100%;
   height: auto;
-  clear: both;
-  float: left;
 }
 
 .abe_title h3 {
@@ -270,6 +415,7 @@ h6 {
   font-weight: 700;
   letter-spacing: 5px;
   font-size: 30px;
+  color: var(--white-color);
 }
 
 .abe_title h3 span {
@@ -278,7 +424,6 @@ h6 {
 
 .about .right .text {
   width: 100%;
-  float: left;
   padding-top: 27px;
   padding-bottom: 28px;
 }
@@ -286,7 +431,7 @@ h6 {
 .about .right .text p {
   word-spacing: 5px;
   line-height: 1.5;
-  color: var(--black-color);
+  color: var(--white-color);
 }
 
 .about .left .image {
@@ -311,29 +456,12 @@ h6 {
   box-shadow: 0 0 40px rgb(0 0 0 / 20%);
 }
 
-.abe_button a {
-  text-decoration: none;
-  color: var(--bg-color);
-  display: inline-block;
-  background-color: var(--red-color);
-  border: 2px solid var(--red-color);
-  padding: 10px 40px;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  border-radius: 5rem;
-}
-
-.abe_button a:hover {
-  background-color: var(--bg-color);
-  color: var(--red-color);
-  border-radius: 5rem;
+.about_me_img {
+  border-radius: 1.5rem;
 }
 
 /* ! ------------------ ! */
-/* *        HOME        * */
+/* *       ABOUT        * */
 /* ? ------------------ ? */
 
 /* ? ------------------ ? */
@@ -357,10 +485,11 @@ h6 {
   font-weight: 700;
   letter-spacing: 5px;
   font-size: 30px;
+  color: var(--white-color);
 }
 
 .contact_sub_title {
-  color: var(--grey-color);
+  color: var(--white-color);
   margin-top: 20px;
   margin-bottom: 40px;
 }
@@ -368,12 +497,6 @@ h6 {
 .contact_form {
   width: 35%;
   margin: auto;
-}
-
-.contact_form_input {
-  width: 100%;
-  padding: 8px;
-  margin-bottom: 10px;
 }
 
 .contact_form_div {
@@ -388,8 +511,10 @@ h6 {
   left: 1.25rem;
   font-size: var(--small-font-size);
   padding: 0.25rem;
-  background-color: var(--bg-color);
+  background-color: var(--main-color);
+  border-radius: 7px;
   z-index: 10;
+  color: var(--white-color);
 }
 
 .contact_form_area {
@@ -406,18 +531,24 @@ h6 {
   left: 0;
   width: 100%;
   height: 100%;
-  border: 2px solid var(--grey-color);
+  border: 2px solid var(--main-color);
   background: none;
   outline: none;
   padding: 1.5rem;
   border-radius: 0.75rem;
   z-index: 1;
+  margin-bottom: 10px;
+  font-size: 15px;
+}
+
+.contact_form_input::placeholder {
+  color: var(--light-grey-color);
 }
 
 .submit_button {
-  color: var(--bg-color);
-  background-color: var(--red-color);
-  border: 2px solid var(--red-color);
+  color: var(--white-color);
+  background-color: var(--main-color-dark);
+  border: 1px solid var(--main-color-dark);
   padding: 10px 40px;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
@@ -425,16 +556,139 @@ h6 {
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
   border-radius: 5rem;
+  font-size: 16px;
 }
 
 .submit_button:hover {
-  background-color: var(--bg-color);
-  color: var(--red-color);
+  background-color: transparent;
+  color: var(--white-color);
+  border: 2px solid var(--white-color);
   border-radius: 5rem;
 }
 
 /* ! ------------------ ! */
 /* *       CONTACT       * */
+/* ? ------------------ ? */
+
+/* ? ------------------ ? */
+/* *       SKILLS       * */
+/* ! ------------------ ! */
+
+.skills {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 20px;
+  /* background: #f9f9f9; */
+}
+
+.skills_title h3 {
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 5px;
+  font-size: 30px;
+  margin-bottom: 50px;
+}
+
+.skill_card {
+  background: var(--white-color);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  padding: 20px;
+  margin: 10px;
+  width: 280px;
+  transition: transform 0.3s ease-in-out;
+  text-align: center;
+  display: flex; /* Utilisez flexbox */
+  flex-direction: column; /* Les éléments s'empilent verticalement */
+  justify-content: space-between;
+}
+
+.skill_card h3 {
+  margin-top: 15px;
+  color: #333;
+}
+
+.skill_card p {
+  margin-top: 15px;
+  font-size: 0.95em;
+  line-height: 1.6;
+  color: #666;
+}
+
+.skill_card .badge {
+  display: block;
+  margin-top: 10px;
+  background: var(--red-color);
+  color: var(--white-color);
+  padding: 3px 7px;
+  border-radius: 5px;
+  font-size: 0.8em;
+}
+
+.skill_card:hover {
+  transform: translateY(-5px);
+}
+
+.skill_card .badge {
+  width: min-content;
+  padding: 10px;
+  border-radius: 50px;
+  align-content: center;
+  margin: auto;
+}
+
+.skill_card_bottom {
+  margin-top: 10px;
+}
+
+.available {
+  background-image: url("https://marketifythemes.net/html/grax//img/patterns/inspiration-geometry.png");
+  background-color: var(--main-color-dark);
+  color: var(--white-color);
+  padding: 50px;
+}
+
+.available h3 {
+  font-size: 30px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  color: var(--white-color);
+}
+
+.available_button {
+  margin-top: 20px;
+}
+
+.available_button a {
+  position: relative;
+  color: var(--red-color);
+  text-decoration: none;
+}
+
+.available_button a::before {
+  content: "";
+  position: absolute;
+  transition: transform 0.23s ease;
+  left: 0;
+  bottom: -5px;
+  width: 100%;
+  height: 2px;
+  transform: scaleX(0);
+  background: var(--red-color);
+}
+
+.available_button a:hover::before {
+  transform: scaleX(1);
+}
+
+.available_text p {
+  font-size: 18px;
+  color: var(--white-color);
+}
+
+/* ! ------------------ ! */
+/* *       SKILLS       * */
 /* ? ------------------ ? */
 
 /* ? ------------------ ? */
@@ -444,7 +698,7 @@ h6 {
 footer {
   width: 100%;
   height: auto;
-  background-color: var(--black-color);
+  /* background-color: var(--black-color); */
   color: var(--white-color);
   text-align: center;
 }
@@ -500,22 +754,130 @@ footer h1 {
 /* *       CURSOR       * */
 /* ? ------------------ ? */
 
-.cursor-outer {
+/* .cursor-outer {
   border-color: var(--red-color);
 }
 
 .cursor-inner {
   background-color: var(--red-color);
 }
+*/
+/* for mobile devices */
 
 @media (max-width: 1040px) {
-  .cursor-outer {
+  /* .cursor-outer {
     display: none;
   }
 
   .cursor-inner {
     display: none;
+  } */
+
+  #magicPointer {
+    display: none;
   }
+
+  #magicMouseCursor {
+    display: none;
+  }
+}
+
+#magicPointer {
+  background-color: var(--red-color) !important;
+}
+#magicMouseCursor {
+  border: 1px solid var(--red-color) !important;
+}
+
+/* Back to Top with Progress */
+.progress-wrap {
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  height: 46px;
+  width: 46px;
+  cursor: pointer;
+  display: block;
+  border-radius: 50px;
+  box-shadow: inset 0 0 0 2px rgb(244 236 236 / 25%);
+  z-index: 10000;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(15px);
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+.progress-wrap.active-progress {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+
+.progress-wrap::after {
+  position: absolute;
+  font-family: "unicons";
+  content: "\e84b";
+  text-align: center;
+  line-height: 46px;
+  font-size: 24px;
+  color: rgba(0, 0, 0, 0.3);
+  left: 0;
+  top: 0;
+  height: 46px;
+  width: 46px;
+  cursor: pointer;
+  display: block;
+  z-index: 1;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+  color: var(--white-color);
+}
+
+.progress-wrap:hover::after {
+  opacity: 0;
+  color: var(--white-color);
+  stroke: var(--white-color);
+}
+
+.progress-wrap::before {
+  position: absolute;
+  font-family: "unicons";
+  content: "\e84b";
+  text-align: center;
+  line-height: 46px;
+  font-size: 24px;
+  opacity: 0;
+  /* background: black; */
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  left: 0;
+  top: 0;
+  height: 46px;
+  width: 46px;
+  cursor: pointer;
+  display: block;
+  z-index: 2;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+.progress-wrap:hover::before {
+  opacity: 1;
+}
+
+.progress-wrap svg path {
+  fill: none;
+  stroke: var(--white-color);
+  color: var(--white-color);
+}
+
+.progress-wrap svg.progress-circle path {
+  stroke-width: 4;
+  box-sizing: border-box;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
 }
 
 /* ? ------------------ ? */
@@ -528,27 +890,29 @@ footer h1 {
 
 @media screen and (max-width: 500px) {
   .home .name {
-    font-size: 35px;
+    /* font-size: 35px; */
   }
 
   .home .job {
-    color: var(--red-color);
-    font-size: 15px;
+    /* font-size: 17px; */
   }
 
   .contact_form {
-    width: 80%;
+    width: 90%;
+  }
+
+  .submit_button {
+    width: 100%;
   }
 }
 
 @media screen and (min-width: 500px) {
   .home .name {
-    font-size: 40px;
+    /* font-size: 40px; */
   }
 
   .home .job {
-    color: var(--red-color);
-    font-size: 17px;
+    /* font-size: 17px; */
   }
 
   .contact_form {
@@ -558,12 +922,11 @@ footer h1 {
 
 @media screen and (min-width: 768px) {
   .home .name {
-    font-size: 45px;
+    /* font-size: 45px; */
   }
 
   .home .job {
-    color: var(--red-color);
-    font-size: 19px;
+    /* font-size: 19px; */
   }
 
   .contact_form {
@@ -573,12 +936,11 @@ footer h1 {
 
 @media screen and (min-width: 1040px) {
   .home .name {
-    font-size: 50px;
+    /* font-size: 50px; */
   }
 
   .home .job {
-    color: var(--red-color);
-    font-size: 21px;
+    /* font-size: 22px; */
   }
 
   .contact_form {
