--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&display=swap'); */
 /* @import url("https://fonts.googleapis.com/css2?family=Mitr:wght@500&display=swap"); */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
   --header-height: 3.5rem;
 
@@ -156,6 +156,7 @@ h6 {
   background-color: var(--body-color);
   z-index: var(--z-fixed);
   transition: 0.4s;
+  cursor: pointer;
 }
 
 .nav_menu {
@@ -170,6 +171,12 @@ h6 {
   left: 0;
   right: 0;
   margin: auto;
+}
+
+.nav_item:hover {
+  background-color: var(--red-color);
+  color: var(--white-color);
+  border-radius: 5rem;
 }
 
 .nav_list {
@@ -317,6 +324,10 @@ h6 {
   color: var(--white-color);
 }
 
+.scroll_link:hover {
+  color: var(--red-color);
+}
+
 .scroll_link i {
   font-size: 24px;
   animation: bounce 2s infinite;
@@ -354,7 +365,7 @@ h6 {
   /* flex-direction: column; */
   /* background-color: hsla(218, 75%, 13%, 0.8); */
   background-color: var(--white-color);
-  border: 1px solid var(--second-color);
+  border: 1px solid transparent;
   padding: 10px;
   gap: 15px;
   margin-bottom: 5px;
@@ -363,7 +374,7 @@ h6 {
 }
 
 .social_network_item:hover {
-  background-color: var(--second-color);
+  background-color: var(--red-color);
 }
 
 .social_network_item:hover .social_network_link {
@@ -733,18 +744,15 @@ footer {
   text-align: center;
 }
 
-footer h1 {
-  font-size: 30px;
-  font-weight: 700;
-  margin-bottom: 20px;
-  color: var(--white-color);
-}
-
 .footer_title {
   font-size: 30px;
   font-weight: 700;
   color: var(--white-color);
   border-bottom: 1px solid var(--red-color);
+}
+
+.footer_title:hover {
+  color: var(--red-color);
 }
 
 .footer_container {
@@ -763,6 +771,10 @@ footer h1 {
 
 .footer_list li {
   margin: 20px;
+}
+
+.footer_list a:hover {
+  color: var(--red-color);
 }
 
 .footer_list a {
@@ -812,16 +824,22 @@ footer h1 {
   }
 }
 
-#magicPointer {
-  background: var(--red-color);
+#magicPointer.pointer-overlay {
+  opacity: 0.5;
+  width: 80px !important;
+  height: 80px !important;
+  mix-blend-mode: normal !important;
+  /* background: white !important; */
 }
-/* #magicPointer.pointer-overlay {
-  background-color: var(--main-color) !important;
-  box-shadow: 0 0 15px 5px var(--main-color) !important;
-} */
+
+#magicPointer {
+  background: var(--red-color) !important;
+}
+
 #magicPointer.pointer-blur {
   border: 1px solid var(--red-color) !important;
 }
+
 #magicMouseCursor {
   border: 1px solid var(--red-color) !important;
 }
@@ -833,7 +851,7 @@ footer h1 {
   bottom: 30px;
   height: 46px;
   width: 46px;
-  cursor: pointer;
+  /* cursor: pointer; */
   display: block;
   border-radius: 50px;
   box-shadow: inset 0 0 0 2px rgb(244 236 236 / 25%);
@@ -872,8 +890,8 @@ footer h1 {
 }
 
 .progress-wrap:hover::after {
-  opacity: 0;
-  color: var(--white-color);
+  /* opacity: ; */
+  color: var(--red-color);
   stroke: var(--white-color);
 }
 
