--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,8 @@
   --z-tooltip: 10;
   --z-fixed: 100;
   --z-modal: 1000;
+
+  --stagger-delay: 100ms;
 }
 
 * {
@@ -103,6 +105,7 @@ h6 {
   /* position: relative; */
   clear: both;
 }
+
 
 .action_outline_btn {
   color: var(--white-color);
@@ -220,60 +223,22 @@ h6 {
   height: 100vh;
   display: flex;
   align-items: center;
-  /* position: relative;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 25% 100%, 0 100%);
-  overflow: hidden;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease; */
 }
-
-/* .home .ripple {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-image: url("https://marketifythemes.net/html/grax/img/slider/2.jpg");
-}
-
-.home .ripple:before {
-  position: absolute;
-  content: "";
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.3);
-  z-index: 1;
-} */
 
 .home .details {
   text-align: center;
-  /* width: 100%;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 5; */
 }
 
 .home .name {
-  /* font-size: 52px; */
   font-size: 3.5rem;
   font-weight: 700;
   color: var(--white-color);
-  /* margin-bottom: 11px; */
   letter-spacing: 0px;
 }
 
 .home .job {
   color: var(--red-color);
   font-family: var(--custom-font);
-  /* font-size: 17px; */
   font-size: 2rem;
   font-weight: 500;
   margin-bottom: 40px;
@@ -362,8 +327,6 @@ h6 {
 }
 
 .social_network_item {
-  /* flex-direction: column; */
-  /* background-color: hsla(218, 75%, 13%, 0.8); */
   background-color: var(--white-color);
   border: 1px solid transparent;
   padding: 10px;
@@ -387,7 +350,6 @@ h6 {
   gap: 8px;
   text-decoration: none;
   color: var(--second-color);
-  /* color: var(--white-color); */
 }
 
 .social_network::after {
@@ -433,10 +395,6 @@ h6 {
 .about .about_inner .right {
   width: 60%;
   padding-left: 50px;
-  /* font-size: 36px;
-  font-weight: 700;
-  color: #000;
-  margin-bottom: 20px; */
 }
 
 .about .about_inner .left img {
@@ -445,20 +403,26 @@ h6 {
   clear: both;
 }
 
-.abe_title {
+.titre {
   width: 100%;
   height: auto;
 }
 
-.abe_title h3 {
+.experience{
+  color: var(--red-color);
+  font-family: var(--custom-font);
+  font-weight: bold;
+}
+
+.titre h3 {
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 5px;
-  font-size: 30px;
+  font-size: 40px;
   color: var(--white-color);
 }
 
-.abe_title h3 span {
+.titre h3 span {
   color: var(--red-color);
 }
 
@@ -518,14 +482,6 @@ h6 {
 
 .center_section  {
   justify-content: center;
-}
-
-.contact_title h3 {
-  text-transform: uppercase;
-  font-weight: 700;
-  letter-spacing: 5px;
-  font-size: 30px;
-  color: var(--white-color);
 }
 
 .contact_sub_title {
@@ -617,15 +573,12 @@ h6 {
 /* ! ------------------ ! */
 
 .skills {
-  /* padding: 50px; */
-  /* padding: 50px 0 50px 0; */
-  padding-bottom: 100px;
-  padding-top: 100px;
+  padding: 100px 0 100px 0;
   max-width: 800px;
   margin: auto;
 }
 
-.skills_inner .abe_title {
+.skills_inner .titre {
   text-align: center;
 }
 
@@ -647,14 +600,13 @@ h6 {
   align-items: end;
 }
 
-.skills_item_progress_value{
+.skills_item_progress_value {
   font-size: 16px;
   color: var(--white-color);
   font-weight: normal;
 }
 
 .skills_item_progress {
-  /* width: 70%; */
   height: 7px;
   background-color: var(--white-color);
   border-radius: 20px;
@@ -667,7 +619,7 @@ h6 {
   border-radius: 20px;
 }
 
-.skills_item_subtitle{
+.skills_item_subtitle {
   font-size: 16px;
   color: var(--white-color);
   margin-top: 10px;
@@ -727,6 +679,157 @@ h6 {
 /* ? ------------------ ? */
 
 /* ? ------------------ ? */
+/* *      PORTFOLIO     * */
+/* ! ------------------ ! */
+.portfolio {
+  padding: 60px 0 100px 0;
+}
+
+.portfolio_inner .titre {
+  text-align: center;
+}
+
+.portfolio_grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-auto-rows: 380px;
+  grid-auto-flow: dense;
+  gap: 1rem;
+  padding: 40px 0 40px 0;
+}
+
+.portfolio_grid .grid_item {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  color: #fff;
+  transition: all 0.5s ease;
+  animation: stagger_show 900ms cubic-bezier(0.36, 1.75, 0.1, 0.67);
+  animation-fill-mode: backwards;
+  cursor: pointer;
+}
+
+.portfolio_grid .grid_item > img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.portfolio_grid .grid_item:nth-child(1) {
+  animation-delay: calc(1 * var(--stagger-delay));
+}
+.portfolio_grid .grid_item:nth-child(2) {
+  animation-delay: calc(2 * var(--stagger-delay));
+}
+.portfolio_grid .grid_item:nth-child(3) {
+  animation-delay: calc(3 * var(--stagger-delay));
+}
+.portfolio_grid .grid_item:nth-child(4) {
+  animation-delay: calc(4 * var(--stagger-delay));
+}
+.portfolio_grid .grid_item:nth-child(5) {
+  animation-delay: calc(5 * var(--stagger-delay));
+}
+.portfolio_grid .grid_item:nth-child(6) {
+  animation-delay: calc(6 * var(--stagger-delay));
+}
+
+@media (min-width: 522px) {
+  .grid_item_tall {
+    grid-row: span 2 / auto;
+  }
+
+  .grid_item_wide {
+    grid-column: span 2 / auto;
+  }
+}
+
+.grid_item_overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+  padding: 20px;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+
+.grid_item_overlay h4 {
+  color: var(--white-color);
+  margin-bottom: 10px;
+}
+
+.grid_item_overlay a {
+  margin-top: 10px;
+  color: var(--red-color);
+  text-decoration: underline;
+}
+
+.portfolio_grid .grid_item:hover .grid_item_overlay {
+  opacity: 1;
+}
+
+/*
+.project_card {
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.project_card_overlay {
+  background: var(--second-color);
+  width: 100%;
+  height: 100%;
+  transition: .5s ease;
+  opacity: 0;
+  color: var(--white-color);
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+  align-content: center;
+}
+
+.project_card:hover .project_card_overlay {
+  opacity: 1;
+}
+
+.project_card_overlay h2 {
+  color: var(--white-color);
+}
+
+.large {
+  width: 30%;
+  height: 400px;
+}
+
+.medium {
+  width: 30%;
+  height: 300px;
+}
+
+.small {
+  width: 30%;
+  height: 250px;
+} */
+
+/* ! ------------------ ! */
+/* *     PORTFOLIO      * */
+/* ? ------------------ ? */
+
+/* ? ------------------ ? */
 /* *       FOOTER       * */
 /* ! ------------------ ! */
 
@@ -750,8 +853,7 @@ footer {
 }
 
 .footer_container {
-  padding-top: 50px;
-  padding-bottom: 150px;
+  padding: 50px 0 150px 0;
   margin: auto;
 }
 
@@ -1023,7 +1125,7 @@ footer {
     padding-left: 0;
   }
 
-  .abe_title h3 {
+  .titre h3 {
     margin-top: 50px;
   }
 
